--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resumo</span></a></li>
                     <!--<li class="nav-item"><a href="#services-section" class="nav-link"><span>Serviços</span></a></li>-->
                     <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projetos</span></a></li>
-                    <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+                    <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Fotografias</span></a></li>
                     <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contacto</span></a></li>
                 </ul>
             </div>
@@ -394,7 +394,7 @@
                 </div>
             </div>
             <div class="row no-gutters">
-                <!--1º projeto-->
+                <!--projeto de lab1-->
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/mythic_makeup.png);">
                         <div class="overlay"></div>
@@ -404,7 +404,7 @@
                         </div>
                     </div>
                 </div>
-                <!--2º projeto-->
+                <!--mini projeto de lab 2-->
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/lab2_mini.png);">
                         <div class="overlay"></div>
@@ -414,7 +414,7 @@
                         </div>
                     </div>
                 </div>
-                <!--3º projeto-->
+                <!--projeto final de lab2-->
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/lab2_final.png);">
                         <div class="overlay"></div>
@@ -424,7 +424,7 @@
                         </div>
                     </div>
                 </div>
-                <!--4º projeto-->
+                <!--projeto final de lab3-->
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/lab3.png);">
                         <div class="overlay"></div>
@@ -434,7 +434,7 @@
                         </div>
                     </div>
                 </div>
-                <!--5º projeto-->
+                <!--projeto final de lab 4-->
                 <div class="col-md-4">
                     <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/lab4.png);">
                         <div class="overlay"></div>
@@ -444,9 +444,19 @@
                         </div>
                     </div>
                 </div>
-                <!--6º projeto-->
+                <!--projeto final de MM2-->
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/mm2.png);">
+                        <div class="overlay"></div>
+                        <div class="text text-center p-4">
+                            <h3><a href="#">Projeto Final de Multimédia II</a></h3>
+                            <span>HTML & Bootstrap 4</span>
+                        </div>
+                    </div>
+                </div>
+                <!--projeto final de lab5-->
+                <div class="col-md-4">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/lab5.png);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="#">Projeto Final de Laboratório Multimédia V</a></h3>
@@ -454,23 +464,13 @@
                         </div>
                     </div>
                 </div>
-                <!--7º projeto-->
+                <!--projeto para projeto-->
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/projeto.png);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="#">Projeto</a></h3>
                             <span>PHP & MySQL</span>
-                        </div>
-                    </div>
-                </div>
-                <!--8º projeto-->
-                <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/mm2.png);">
-                        <div class="overlay"></div>
-                        <div class="text text-center p-4">
-                            <h3><a href="#">Projeto Final de Multimédia II</a></h3>
-                            <span>HTML & Bootstrap 4</span>
                         </div>
                     </div>
                 </div>
@@ -496,7 +496,7 @@
                 </div>
                 <!--11º projeto-->
                 <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
+                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(img/convite_bodas.png);">
                         <div class="overlay"></div>
                         <div class="text text-center p-4">
                             <h3><a href="#">Bodas de prata</a></h3>
@@ -504,77 +504,34 @@
                         </div>
                     </div>
                 </div>
-                <!--12º projeto-->
-                <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
-                        <div class="overlay"></div>
-                        <div class="text text-center p-4">
-                            <h3><a href="#">Berlim</a></h3>
-                            <span>Fotografia</span>
-                        </div>
-                    </div>
-                </div>
-                <!--13º projeto-->
-                <div class="col-md-4">
-                    <div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
-                        <div class="overlay"></div>
-                        <div class="text text-center p-4">
-                            <h3><a href="#">Praia da Barra</a></h3>
-                            <span>Fotografia</span>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
 
+    <!--
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
         <div class="container-fluid px-md-5">
             <div class="row d-md-flex align-items-center">
+
                 <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
                     <div class="block-18 shadow">
                         <div class="text">
-                            <strong class="number" data-number="100">0</strong>
-                            <span>Awards</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18 shadow">
-                        <div class="text">
-                            <strong class="number" data-number="1200">0</strong>
-                            <span>Complete Projects</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18 shadow">
-                        <div class="text">
-                            <strong class="number" data-number="1200">0</strong>
-                            <span>Happy Customers</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18 shadow">
-                        <div class="text">
-                            <strong class="number" data-number="500">0</strong>
-                            <span>Cups of coffee</span>
+                            <strong class="number" data-number="1">0</strong>
+                            <span>Projetos fora da licenciatura</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+-->
 
     <section class="ftco-section" id="blog-section">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
                 <div class="col-md-7 heading-section text-center ftco-animate">
-                    <h1 class="big big-2">Blog</h1>
-                    <h2 class="mb-4">Our Blog</h2>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                    <h2 class="mb-4">Albúns de fotografias</h2>
+                    <p>Apesar da minha grande paixão ser o <i>Web design</i>, a fotografia sempre foi um dos meus hobbies favoritos, assim deixo aqui alguns albúns criados por mim.</p>
                 </div>
             </div>
             <div class="row d-flex">
@@ -633,6 +590,7 @@
         </div>
     </section>
 
+    <!--
     <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
         <div class="overlay"></div>
         <div class="container">
@@ -645,59 +603,48 @@
             </div>
         </div>
     </section>
-
+-->
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-3">
                 <div class="col-md-7 heading-section text-center ftco-animate">
-                    <h1 class="big big-2">Contact</h1>
-                    <h2 class="mb-4">Contact Me</h2>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                    <h2 class="mb-4">Contactos</h2>
+                    <!--
+                    <p></p>-->
                 </div>
             </div>
 
             <div class="row d-flex contact-info mb-5">
-                <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+                <div class="col-xs-12 col-md-6 col-lg-4 d-flex ftco-animate">
                     <div class="align-self-stretch box text-center p-4 shadow">
                         <div class="icon d-flex align-items-center justify-content-center">
                             <span class="icon-map-signs"></span>
                         </div>
                         <div>
-                            <h3 class="mb-4">Address</h3>
-                            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+                            <h3 class="mb-4">Endereço de Email</h3>
+                            <p><a href="mailto:anafilipa.ferreira99@mail.com">anafilipa.ferreira99@mail.com</a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+                <div class="col-xs-12 col-md-6 col-lg-4 d-flex ftco-animate">
                     <div class="align-self-stretch box text-center p-4 shadow">
                         <div class="icon d-flex align-items-center justify-content-center">
                             <span class="icon-phone2"></span>
                         </div>
                         <div>
-                            <h3 class="mb-4">Contact Number</h3>
-                            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+                            <h3 class="mb-4">Contacto</h3>
+                            <p><a href="tel://931853966">931853966</a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+                <div class="col-xs-12 col-md-6 col-lg-4 d-flex ftco-animate">
                     <div class="align-self-stretch box text-center p-4 shadow">
                         <div class="icon d-flex align-items-center justify-content-center">
                             <span class="icon-paper-plane"></span>
                         </div>
                         <div>
-                            <h3 class="mb-4">Email Address</h3>
-                            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-                    <div class="align-self-stretch box text-center p-4 shadow">
-                        <div class="icon d-flex align-items-center justify-content-center">
-                            <span class="icon-globe"></span>
-                        </div>
-                        <div>
-                            <h3 class="mb-4">Website</h3>
-                            <p><a href="#">yoursite.com</a></p>
+                            <h3 class="mb-4">Linkedin</h3>
+                            <p><a href="https://www.linkedin.com/in/ana-ferreira-1a78a8171/">Ana Ferreira</a></p>
                         </div>
                     </div>
                 </div>
