alterações de 15 de maio

--- a/index.html
+++ b/index.html
@@ -535,19 +535,13 @@
                 </div>
             </div>
             <div class="row d-flex">
+                <!--berlim-->
                 <div class="col-md-4 d-flex ftco-animate">
                     <div class="blog-entry justify-content-end">
-                        <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+                        <a href="berlim.html" class="block-20" style="background-image: url('img/berlim/berlim_5.jpg');">
                         </a>
                         <div class="text mt-3 float-right d-block">
-                            <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                            <div class="d-flex align-items-center mb-3 meta">
-                                <p class="mb-0">
-                                    <span class="mr-2">Sept. 12, 2019</span>
-                                    <a href="#" class="mr-2">Admin</a>
-                                    <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                                </p>
-                            </div>
+                            <h3 class="heading"><a href="berlim.html">Álbum de Berlim</a></h3>
                             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                         </div>
                     </div>
