--- a/lab2_final.html
+++ b/lab2_final.html
@@ -74,20 +74,41 @@
     <section class="mt-5">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <img class="img-fluid mb-4" src="img/projetos_ind/lab1/mm_1.jpg">
+                <div class="col-6 mt-2">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/projetos_ind/lab2_final/d_1.PNG" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="img/projetos_ind/lab2_final/d_2.PNG" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="img/projetos_ind/lab2_final/d_3.PNG" alt="Third slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="img/projetos_ind/lab2_final/d_4.PNG" alt="Fourth slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="img/projetos_ind/lab2_final/d_5.PNG" alt="Fifth slide">
+                          </div>
                         </div>
-                        <div class="col-lg-4">
-                            <img class="img-fluid mb-2" src="img/projetos_ind/lab1/mm_2.jpg">
-                            <img class="img-fluid mb-2" src="img/projetos_ind/lab1/mm_4.jpg">
-                        </div>
-                        <div class="col-lg-4">
-                            <img class="img-fluid mb-2" src="img/projetos_ind/lab1/mm_3.jpg">
-                            <img class="img-fluid mb-2" src="img/projetos_ind/lab1/mm_5.jpg">
-                        </div>
-                    </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
 
                 </div>
                 <div class="col-6">
